# pokeman

./: .coveragerc  .gitignore  .travis.yml  LICENSE  README.md  README.rst  pyproject.toml  setup.py
examples/: basic_message_consumer.py  basic_message_producer.py  manage_amqp_resources.py  polling_consumer.py  selective_consumer.py
pokeman/: __init__.py  pokeman.py
pokeman/amqp_resources/: __init__.py  builders.py  globals.py  heapq.py  resolvers.py
pokeman/coatings/: __init__.py  builders.py  ptypes.py  resolvers.py
pokeman/coatings/message_constructions/: __init__.py  _abc_message.py  message.py
pokeman/coatings/messaging_endpoints/: __init__.py  _abc_endpoint.py  basic_message_consumer.py  polling_consumer.py  polling_endpoint.py  selective_consumer.py
pokeman/coatings/resolver_attribute_methods/: selective_consumer.py
pokeman/composite/: __init__.py  connection.py
pokeman/composite/config/: configs.py
pokeman/consume/: __init__.py  asynchronous_consumer.py
pokeman/produce/: synchronous_producer.py
pokeman/utils/: custom_abc.py  task.py
tests/: __init__.py  ctest__pokeman.py  ctest_async.py  ctest_heapq.py
tests/unit/amqp_resources/: test_builders.py  test_globals.py  test_heapq.py  test_resolvers.py
tests/unit/composite/: test_connection.py
tests/unit/composite/config/: test_configs.py
tests/unit/utils/: test_custom_abc.py  test_task.py
