[tool.poetry]
name = "pokeman"
version = "0.0.1"
description = "Pokeman is an AMQP service choreography library for Python."
authors = ["Wolf Marcuse"]
license = "BSD"

[tool.poetry.dependencies]
python = "3.8"
pika = "1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
